[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/Charis_SIL/CharisSIL-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://player/UI/player_ui_handler.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Player/Camera/CameraPositionHandler.gd" type="Script" id=3]
[ext_resource path="res://player/UI/inventory_ui_handler.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Player/Camera/CameraPivot.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Player/UI/Aim.gd" type="Script" id=6]
[ext_resource path="res://player/UI/pockets_ui_handler.gd" type="Script" id=7]
[ext_resource path="res://Fonts/default_dynamicfont.tres" type="DynamicFont" id=8]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 1 )

[node name="CamRoot" type="Spatial"]
script = ExtResource( 5 )

[node name="h" type="Spatial" parent="."]

[node name="v" type="Spatial" parent="h"]

[node name="RaycastPosition" type="Position3D" parent="h/v"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 2.5, -99 )

[node name="Camera" type="ClippedCamera" parent="h/v" groups=["player_camera"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 2.5, 3.97 )
script = ExtResource( 3 )

[node name="RayCast" type="RayCast" parent="h/v/Camera"]

[node name="PlayerUI" type="Control" parent="h/v/Camera" groups=["player_ui"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ItemText" type="RichTextLabel" parent="h/v/Camera/PlayerUI"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -119.0
margin_top = -33.0
margin_right = 119.0
margin_bottom = -18.0
text = "\"E\" Para coletar. Segure para equipar"

[node name="AimPoint" type="RichTextLabel" parent="h/v/Camera/PlayerUI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 489.5
margin_top = 270.0
margin_right = 494.5
margin_bottom = 290.0
text = "."
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HealthLabel" type="Label" parent="h/v/Camera/PlayerUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -50.0
margin_right = 158.0
theme = SubResource( 1 )
text = "Saude: 100"

[node name="InventoryUI" type="Control" parent="h/v/Camera/PlayerUI" groups=["player_ui"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="PocketsUI" type="Control" parent="h/v/Camera/PlayerUI/InventoryUI" groups=["player_ui"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="PocketsContainer" type="PanelContainer" parent="h/v/Camera/PlayerUI/InventoryUI/PocketsUI"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 8.0
margin_top = 212.0
margin_right = -864.0
margin_bottom = 258.0

[node name="PocketsSlots" type="HBoxContainer" parent="h/v/Camera/PlayerUI/InventoryUI/PocketsUI/PocketsContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 145.0
margin_bottom = 39.0
size_flags_horizontal = 3

[node name="left" type="PanelContainer" parent="h/v/Camera/PlayerUI/InventoryUI/PocketsUI/PocketsContainer/PocketsSlots"]
margin_right = 31.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="ItemIcon" type="Sprite" parent="h/v/Camera/PlayerUI/InventoryUI/PocketsUI/PocketsContainer/PocketsSlots/left"]
visible = false
centered = false
offset = Vector2( 5, 5 )

[node name="ItemQuantity" type="Label" parent="h/v/Camera/PlayerUI/InventoryUI/PocketsUI/PocketsContainer/PocketsSlots/left/ItemIcon"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -9.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="right" type="PanelContainer" parent="h/v/Camera/PlayerUI/InventoryUI/PocketsUI/PocketsContainer/PocketsSlots"]
margin_left = 35.0
margin_right = 67.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="ItemIcon" type="Sprite" parent="h/v/Camera/PlayerUI/InventoryUI/PocketsUI/PocketsContainer/PocketsSlots/right"]
visible = false
centered = false
offset = Vector2( 5, 5 )

[node name="ItemQuantity" type="Label" parent="h/v/Camera/PlayerUI/InventoryUI/PocketsUI/PocketsContainer/PocketsSlots/right/ItemIcon"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -9.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="back_left" type="PanelContainer" parent="h/v/Camera/PlayerUI/InventoryUI/PocketsUI/PocketsContainer/PocketsSlots"]
margin_left = 71.0
margin_right = 102.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="ItemIcon" type="Sprite" parent="h/v/Camera/PlayerUI/InventoryUI/PocketsUI/PocketsContainer/PocketsSlots/back_left"]
visible = false
centered = false
offset = Vector2( 5, 5 )

[node name="ItemQuantity" type="Label" parent="h/v/Camera/PlayerUI/InventoryUI/PocketsUI/PocketsContainer/PocketsSlots/back_left/ItemIcon"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -9.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="back_right" type="PanelContainer" parent="h/v/Camera/PlayerUI/InventoryUI/PocketsUI/PocketsContainer/PocketsSlots"]
margin_left = 106.0
margin_right = 138.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="ItemIcon" type="Sprite" parent="h/v/Camera/PlayerUI/InventoryUI/PocketsUI/PocketsContainer/PocketsSlots/back_right"]
visible = false
centered = false
offset = Vector2( 5, 5 )

[node name="ItemQuantity" type="Label" parent="h/v/Camera/PlayerUI/InventoryUI/PocketsUI/PocketsContainer/PocketsSlots/back_right/ItemIcon"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -9.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="PocketsActionKeys" type="HBoxContainer" parent="h/v/Camera/PlayerUI/InventoryUI/PocketsUI"]
margin_left = 15.0
margin_top = 496.0
margin_right = 153.0
margin_bottom = 528.0
custom_constants/separation = 28
alignment = 1

[node name="left" type="Label" parent="h/v/Camera/PlayerUI/InventoryUI/PocketsUI/PocketsActionKeys"]
margin_left = 11.0
margin_top = 9.0
margin_right = 19.0
margin_bottom = 23.0
text = "4"

[node name="right" type="Label" parent="h/v/Camera/PlayerUI/InventoryUI/PocketsUI/PocketsActionKeys"]
margin_left = 47.0
margin_top = 9.0
margin_right = 55.0
margin_bottom = 23.0
text = "5"

[node name="back_left" type="Label" parent="h/v/Camera/PlayerUI/InventoryUI/PocketsUI/PocketsActionKeys"]
margin_left = 83.0
margin_top = 9.0
margin_right = 91.0
margin_bottom = 23.0
text = "6"

[node name="back_right" type="Label" parent="h/v/Camera/PlayerUI/InventoryUI/PocketsUI/PocketsActionKeys"]
margin_left = 119.0
margin_top = 9.0
margin_right = 127.0
margin_bottom = 23.0
text = "7"

[node name="defaultPosition" type="Position3D" parent="h/v"]
transform = Transform( 1, 0, 0, 0, 0.970296, 0.241922, 0, -0.241922, 0.970296, 1.5, 2.5, 3.97 )

[node name="aimPosition" type="Position3D" parent="h/v"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, 1.2, 2.7 )
